--- a/ResumeCSS.css
+++ b/ResumeCSS.css
@@ -9,6 +9,12 @@ div {
     -ms-user-select: none;
     user-select: none; 
 }
+img {
+    -webkit-user-select: none;
+    -moz-user-select: none; 
+    -ms-user-select: none;
+    user-select: none; 
+}
 #Background {
     position:absolute;
     margin:0; padding:0; border:none;
@@ -20,10 +26,12 @@ button {
     cursor:pointer;
 }
 /*-------------- Scroll ---------------*/
-.VerticalScroll {
+#VerticalScroll {
     position:absolute;
     margin:0; padding:0; border:none;
     right:4vw; top: 30vh;
+    opacity:0;
+    transition:0.7s;
 }
 .ScrollIcon {
     position:relative;
@@ -39,7 +47,7 @@ button {
     background-color:red;
     opacity:1;
 }
-/* ----------------- Content -----------------------*/
+/* ----------------- Sections -----------------------*/
 .Section {
     position: absolute;
     margin:0; padding:0; border:none;
@@ -50,10 +58,10 @@ button {
 }
 .SectionTitle {
     position:absolute;
+    left:0; top:1vh;
     display:inline;
     opacity:1;
     font-family:sans-serif; font-weight:500;
-    left:0; top:1vh;
     font-size:calc(20px + 0.5vw);;
     transition:0.4s;
 }
@@ -65,6 +73,52 @@ button {
     z-index:-1;
     user-select:none;
     -webkit-user-drag: none;
+}
+/*-------- S1 - Introduction --------*/
+#LarryWu {
+    position:absolute;
+    text-align:center;
+    top: 30vh;
+    margin:0; padding:0; border:none;
+    width:100%;
+    color:white; 
+    font-family:sans-serif; font-weight:700;
+    font-size:calc(32px + 2.5vw);
+    text-shadow:3px 3px 3px black, -3px -3px 3px black;
+    text-align:center;
+    opacity:0;
+    transition:0.7s;
+}
+.S1Buttons {
+    position:absolute;
+    margin:0; padding:0; border:none;   
+    box-shadow: 2px 2px 2px black, -2px -2px 2px black;
+    outline:none;
+    width:8vw;
+    font-size: 1vw; font-family:sans-serif; font-weight:600;
+    top:65vh;
+    opacity:0;
+    transition:opacity 0.4s, 0.7s;
+}
+#EducationButton {
+    background-color:white;
+    left:20vw;
+}
+#SkillsButton {
+    background-color:orangered;
+    left:33vw;
+}
+#RhythmTrackButton {
+    background-color:red;
+    left:46vw;
+}
+#ImageCollectorButton {
+    background-color:chartreuse;
+    left:59vw;
+}
+#TurnipEsportsButton {
+    background-color:gold;
+    left:72vw;
 }
 /*-------- S2 - Education --------*/
 .S2Elem {
