--- a/ResumeCSS.css
+++ b/ResumeCSS.css
@@ -100,6 +100,9 @@ button {
     opacity:0;
     transition:opacity 0.4s, 0.7s;
 }
+.S1Buttons:hover {
+    opacity:1;
+}
 #EducationButton {
     background-color:white;
     left:20vw;
@@ -275,5 +278,65 @@ button {
 #S6Text3 {
     top:calc(64px + 3vw + 10vh);
     font-size:calc(12px + 0.5vw);
+}
+/*-------- S7 - Contact Information --------*/
+.S7Elem {
+    position:absolute;
+    margin:0; padding:0; border:none;
+    width:100%;
+    text-align:center;
+    color:white;
+    font-family:sans-serif;
+    opacity:0;
+    transition:0.8s;    
+}
+#S7Text1 {
+    top:25vh;
+    font-size:calc(32px + 2vw); font-weight:700;  
+}
+#S7Text2 {
+    top:calc(46px + 2vw + 30vh);
+    font-size:calc(20px + 0.5vw);
+}
+#S7Text3 {
+    top:calc(64px + 3vw + 35vh);
+    font-size:calc(12px + 0.5vw);
+}
+#S7Text4 {
+    top:calc(86px + 3.5vw + 37vh);
+    font-size:calc(12px + 0.5vw);
+}
+#S7Wrapper {
+    position:absolute;
+    margin:0; padding:0; border:none;
+    left:0;
+    width:100%; height:10vh;
+    top:70vh;
+}
+#S7Wrapper button {
+    position:absolute;
+    margin:0;
+    border-radius:30%; border: 2px solid purple;
+    width:10vw; height:100%;
+    background-color:lime;
+    font-size: calc(24px + 1vw); font-weight:700;
+    outline:none;
+}
+#Github {
+    width:10vw; height:100%;
+    left:20vw;
+}
+#Github:hover {
+    background-color:purple;
+}
+#LinkedIn {
+    position:absolute;
+    margin:0; padding:0;
+    border-radius:30%; border: 2px solid purple;
+    width:10vw; height:100%;
+    left:70vw;
+}
+#LinkedIn:hover {
+    background-color:purple;
 }
 /*-------------------------*/
